# youbot_ros2

./: .gitignore  CMakeLists.txt  TMCM-1610_mechanism.launch.py  TMCM-1610_single_joint_mechanism.urdf  TMCM-1610_single_joint_mechanism_controllers.yaml  package.xml
config/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  youbot_arm.srdf  youbot_arm_moveit.launch.py
control/: KUKA-YouBot-arm.launch.py  KUKA-YouBot-arm.urdf  KUKA-YouBot-arm_controllers.yaml  TMCM-1610_mechanism.launch.py  TMCM-1610_single_joint_mechanism.urdf  TMCM-1610_single_joint_mechanism_controllers.yaml  arm.control.urdf.xacro  valgrind_trace_01  valgrind_trace_filter_01
description/: README.md
description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_base_only.urdf.xacro  youbot_gazebo.urdf.xacro
description/urdf/youbot_arm/: arm.urdf.xacro
description/urdf/youbot_gripper/: gripper.transmission.xacro  gripper.urdf.xacro  limits.urdf.xacro
launch/: youbot_arm_moveit.launch.py  youbot_arm_rviz_motion_planning.launch.py
moveit2-config/: .setup_assistant  package.xml
moveit2-config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  youbot.srdf
moveit2-config/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  youbot_moveit.launch  youbot_moveit_controller_manager.launch.xml
